ffmpeg: Fail if the user requested impossible subtitle encoding.

Fixes ticket #7239.